fixed background on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 /* CSS Document */
 body {
-	background: url(../images/3scoops.jpg) no-repeat center center; 
+	background: url(../images/3scoops.jpg) no-repeat center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	background-color: #ccc2c0;
 	min-height: 1000px;
 }
 h4 {
